# INI-Parser

./: .gitignore  CMakeLists.txt  INI.cpp  INI.h  README.md
